# backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yaml
apps/api/v1/: permissions.py  urls.py  views.py
apps/attributes/: admin.py  apps.py  models.py  selectors.py
apps/attributes/migrations/: 0001_initial.py  0002_activitystatus_alter_course_options_remove_city_slug_and_more.py  0002_activitystatus_reviewstatus_alter_course_options_and_more.py  0003_occupation.py  0004_alter_direction_options.py  0005_employeesnumber_alter_course_options_and_more.py
apps/core/: constants.py  exceptions.py  models.py  utils.py
apps/employers/: admin.py  apps.py  models.py  selectors.py  services.py  validators.py
apps/employers/migrations/: 0001_initial.py  0002_remove_employer_company_remove_employer_contacts_and_more.py  0003_alter_selectedresume_employer.py  0004_alter_selectedresume_status.py  0005_alter_selectedresume_comments.py  0006_employer_employees_qty_employer_foundation_year_and_more.py  0007_alter_document_employer.py  0008_employer_file.py  (+1 more)
apps/students/: admin.py  models.py  selectors.py  services.py
apps/students/migrations/: 0001_initial.py  (+4 more)
apps/users/: admin.py  models.py  services.py
apps/vacancies/: admin.py  apps.py  models.py  selectors.py  services.py
archives/: README.md
config/: asgi.py  settings.py  urls.py  wsgi.py
infra/: docker-compose.yaml  nginx.conf
static/fixtures/: activity_status.csv  all_fixtures.xlsx  applicants.json  cities.csv  courses-stack.csv  courses.csv  data.json  directions.csv  employees_number.csv  occupations.csv  review_status.csv  stack.csv  work_formats.csv  work_statuses.csv
tests/: conftest.py  test_01_users.py  test_02_employer.py  test_03_vacancies.py  test_04_attributes.py  test_05_applicants.py  test_06_responds.py  utils.py
tests/fixtures/: fixtures_attributes.py  fixtures_employers.py  fixtures_vacancies.py
tests/utils/: employer_utils.py  vacancy_utils.py
(+19 files in other folders)
